# linmo

./: .gitignore  AGENT.md  LICENSE  README.md  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
packaging/windows/: build-gui.ps1
src/linmo/: __init__.py  cli.py  glyph_pipeline.py  image_pipeline.py  pages.py  processing.py  runtime.py
src/linmo_app/: __init__.py  api.py  launcher.py  paths.py  repository.py  services.py
tests/: test_app_services.py  test_cli_resources.py  test_glyph_pipeline.py  test_image_pipeline.py  test_ocr_resources.py  test_pages.py  test_runtime.py
